--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="link" href="modules.html">Modules</a>
         <a class="link" href="article.html">Indents</a>
       </div>
-      <a href="skillbox.docx">Скачать программу</a>
+      <a class="link-download" href="skillbox.docx">Скачать программу</a>
     </div>
   </body>
 </html>
