Final home dev - 1.0 pre relise

--- a/article.html
+++ b/article.html
@@ -30,7 +30,7 @@
         ошибок.
       </p>
 
-      <div class="title-article-grey-block">
+      <div class="title-article-grey-block grey-block-image-first">
         <h2 class="head-h2">Содержание</h2>
         <p class="paragraph-text">
           Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь
@@ -38,19 +38,19 @@
           основные правила:
         </p>
         <ul class="list-ul">
-          <li class="list-li"><a href="#section-1">Основные принципы работы с отступами</a></li>
+          <li class="list-li"><a class="link-list" href="#section-1">Основные принципы работы с отступами</a></li>
           <li class="list-li">
-            <a href="#section-2"
+            <a class="link-list" href="#section-2"
               >Первый принцип: отступы от предыдущего к следующему</a
             >
           </li>
           <li class="list-li">
-            <a href="#section-3"
+            <a class="link-list" href="#section-3"
               >Второй принцип: отступы задаются только между соседями</a
             >
           </li>
           <li class="list-li">
-            <a href="#section-4"
+            <a class="link-list" href="#section-4"
               >Третий принцип: у последнего элемента группы обнуляем отступ</a
             >
           </li>
@@ -65,7 +65,7 @@
           направо. Именно поэтому, если какой-то элемент на макете находится
           справа, он должен в HTML-коде идти последним из своей группы.
         </p>
-        <p class="paragraph-text">Исходя из этого, можно сразу сформулировать первый принцип.</p>
+        <p class="paragraph-text paragraph-text-blue">Исходя из этого, можно сразу сформулировать первый принцип.</p>
       </div>
 
       <div class="chapter" id="section-2">
@@ -79,7 +79,7 @@
         </p>
         <figure class="figure-img">
           <img src="img/1.jpg" alt="как правильно задавать отступы">
-          <figcaption>
+          <figcaption class="figcation-title">
             На скриншоте видно, как правильно задавать отступы, — только справа и
             снизу (показано оранжевым)
           </figcaption>
@@ -112,7 +112,7 @@
         </p>
         <figure class="figure-img">
           <img src="img/4.jpg" alt="выпадение отступов">
-          <figcaption>
+          <figcaption class="figcation-title">
             На скриншоте — выпадение отступов. Отступ есть, но он не увеличивает
             размер «родителя» с голубым фоном, образуя лишний отступ — типичную
             ошибку вёрстки.
@@ -162,7 +162,7 @@
         </p>
 
 
-      <div class="title-article-grey-block">
+      <div class="title-article-grey-block grey-block-image-second">
         <h2 class="head-h2">Итог</h2>
         <p class="paragraph-text last-paragraf">
           Это основные правила организации отступов, которые помогут вам сделать
